syntax = "proto3";

package api;

import "base.proto";

// Get information from StoredKey raw data
message LoadStoredKeyParam {
    repeated bytes data = 1;
}

message LoadStoredKeyResp {
    repeated StoredKeyInfo StoredKeys = 1;
}

// Create a new StoredKey with random generated mnemonic, this request will NOT create any account
message CreateStoredKeyParam {
    string name = 1;
    string password = 2;
}

message CreateStoredKeyResp {
    StoredKeyInfo StoredKey = 1;
}

// Create a StoredKey with private key, please aware that this request DOES create an account with the specific coin
message ImportPrivateStoredKeyParam {
    string privateKey = 1; // Hex encoded private key string
    string password = 2;
    string name = 3;
    Coin coin = 4;
}

message ImportPrivateStoredKeyResp {
    StoredKeyInfo StoredKey = 1;
}

// Create a new StoredKey with given mnemonic, this request will NOT create any account
message ImportMnemonicStoredKeyParam {
    string mnemonic = 1;
    string name = 2;
    string password = 3;
}

message ImportMnemonicStoredKeyResp {
    StoredKeyInfo StoredKey = 1;
}

// Create a new StoredKey with JSON, please aware that this request DOES create an account with the specific coin
message ImportJSONStoredKeyParam {
    string json = 1;
    string name = 2;
    string password = 3;
    Coin coin = 4;
}

message ImportJSONStoredKeyResp {
    StoredKeyInfo StoredKey = 1;
}

// Update the password of an exisiting StoredKey
message UpdateStoredKeyPasswordParam {
    bytes StoredKeyData = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message UpdateStoredKeyPasswordResp {
    StoredKeyInfo StoredKey = 1;
}

// Update the password of an exisiting StoredKey
message UpdateStoredKeyNameParam {
    bytes StoredKeyData = 1;
    string newName = 2;
}

message UpdateStoredKeyNameResp {
    StoredKeyInfo StoredKey = 1;
}
